Removed man graphic since students may think he is supposed to do something
Put zero at the bottom of rulers in flow and water tower tabs
# 0.00.43 (58597) Nov 15, 2011
Moved the plant and man behind the rulers and sensors
# 0.00.42 (58595) Nov 15, 2011
Reverse the numbers on the ruler so 0 is at the top of the pool
Made man and plan non-draggable
# 0.00.41 (58591) Nov 15, 2011
Fluid pressure: Added a potted plant and standing man for a sense of scale
# 0.00.40 (57966) Oct 24, 2011
Fluid flow: Account for the minimum pipe width when restricting the pipe y-offset, this prevents the pipe from being made too small
# 0.00.39 (57964) Oct 24, 2011
Fluid flow: Moved the control panels in front of the pipe so they can't be obscured by it
# 0.00.38 (57960) Oct 24, 2011
Fluid flow: Restrict flow rate to be more than or equal to 1000 L/s, this prevents too many red dots from piling up
Fluid flow: Restrict flow rate to be less than or equal to 10000 L/s, this prevents negative pressure situations
Fluid flow: Update the pressure readout when the user changes the flow rate
# 0.00.37 (57958) Oct 24, 2011
Updated handle images for pipe and hose to have "grip" texture
# 0.00.36 (57926) Oct 24, 2011
Replaced T-handle with circle handle for pipe and hose
# 0.00.35 (57619) Oct 13, 2011
Fluid Flow: moved the density control in front of the pipe so it doesn't get overlapped
# 0.00.34 (57615) Oct 13, 2011
Fixed: the ruler can be dragged off the canvas
Fluid flow: Fixed: If the right hand pipe is fully expanded there is visual interference with the fluid density box.
Fixed: the ruler is leaving "ghosting" litter on the screen
Fluid flow: Constrain the pipe so it can't become too wide or thin to reduce dye misshaping problems
Fluid flow: Fixed: Pipe pressure can become negative
# 0.00.33 (57585) Oct 12, 2011
Addressed review issues, see #3097
Switched to use piccolo slider instead of swing slider to avoid mac problems, see #3101 #3097
# 0.00.32 (57091) Sep 30, 2011