@@ -1,3 +1,4 @@
+Position the meter stick so that its origin is at the top of the pool since the rulers measure down in this tab
 Removed man graphic since students may think he is supposed to do something
 Put zero at the bottom of rulers in flow and water tower tabs
 # 0.00.43 (58597) Nov 15, 2011
